# trackedfitness-fs-rust

./: .gitignore  Cargo.toml  rustfmt.toml  tailwind.config.js
.cargo/: config.toml
end2end/: package-lock.json  package.json  playwright.config.ts
end2end-cypress/: package-lock.json  tsconfig.json
end2end/tests/: auth-login.spec.ts  auth-signup.spec.ts  diet-target-management.spec.ts  ignore.spec.ts  landing-page.spec.ts  profile-management.spec.ts  progress-management.spec.ts
end2end/utils/: login.ts  selectors.ts
migrations/: 20240321124626_add_food_dataset_columns.down.sql  20240321124626_add_food_dataset_columns.up.sql  20240321154406_upd_food_add_category.down.sql  20240321154406_upd_food_add_category.up.sql  20240321165526_upd_food_drop_not_null.up.sql  20240321165849_upd_food_data_value_numeric_of.down.sql  20240321165849_upd_food_data_value_numeric_of.up.sql  20240327113458_create_user_block.down.sql  20240327113458_create_user_block.up.sql  20240421104621_recreate-training-plan-tables.up.sql  20240505115553_unique-meal-name-user-id.down.sql  20240505115553_unique-meal-name-user-id.up.sql  20240505134105_privacy-level-constraint.up.sql  20240515074446_alter-workout-plan-training-plan-add-m2m.down.sql  20240515074446_alter-workout-plan-training-plan-add-m2m.up.sql  20240515100925_alter-workout-plan-remove-seq-weekday.down.sql  20240515100925_alter-workout-plan-remove-seq-weekday.up.sql  20240515113817_alter-workout-plan-remove-training-plan-ref.down.sql  20240515113817_alter-workout-plan-remove-training-plan-ref.up.sql  20240630133904_add_profile_image_location.down.sql  20240630133904_add_profile_image_location.up.sql
scripts/: add_import.py  find_and_replace.py  sort_components.py
sql/: diet_day_avg_week.sql  diet_day_total.sql  diet_food_total.sql  diet_food_total_list.sql  diet_meal_total_list.sql  user_statistic_by_username.sql  workout_day_list.sql  workout_summary_date_series.sql
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  setup.rs
src/admin/: admin_follower_list_page.rs  detail_page.rs  follower_create_form.rs  follower_detail_page.rs  layout.rs  mod.rs  router.rs  user_block_create_form.rs  user_block_detail_page.rs  user_block_list_page.rs  user_create_page.rs  user_detail_page.rs  user_list_page.rs  user_select.rs  user_stats_list.rs
src/auth/: context.rs  cookie.rs  email_change_complete_page.rs  email_change_confirm_page.rs  email_change_done_page.rs  email_change_page.rs  email_service.rs  login_page.rs  logout_page.rs  mod.rs  model.rs  password_reset_complete_page.rs  password_reset_confirm_page.rs  password_reset_done_page.rs  password_reset_page.rs  privacy_level.rs  protected_route.rs  repository_impl.rs  service.rs  signup_complete_page.rs  signup_confirm_page.rs  signup_done_page.rs  signup_page.rs  signup_resend_page.rs  token.rs  validate.rs
src/brand/: create_page.rs  delete_page.rs  detail_page.rs  list_page.rs  mod.rs  model.rs  permission.rs  repository_impl.rs  select.rs  update_page.rs  upload_page.rs  validate.rs
src/chart/: element.rs  line.rs  mod.rs  piechart.rs  util.rs
src/component/: badge.rs  bulk_delete.rs  bulk_delete_date.rs  button.rs  calendar.rs  card.rs  checkbox.rs  date_navigation.rs  dropdown.rs  icon.rs  input.rs  link.rs  mod.rs  modal.rs  navbar.rs  select.rs  (+4 more)
style/: tailwind.css
template/: account_activation_email.html  email_change_email.html  password_reset_email.html
(+313 files in other folders)
